Fixed score display and fixed bug
fixed bug where app would crash when user pressed the up button on the score display

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventDisplay"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity
+            android:name=".EventDisplay"
+            android:parentActivityName=".MainActivity"
+            android:launchMode="singleTop"></activity>
+        <activity android:name=".ScoreDisplay"
+            android:parentActivityName=".EventDisplay"
+            android:launchMode="singleTop"></activity>
     </application>
 
 </manifest>
